--- a/style.css
+++ b/style.css
@@ -1,8 +1,96 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Just+Another+Hand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
+
+:root {
+    --primary-color: #2c5a5b;
+    --secundary-color: #839b93;
+
+    --statement-font: 'Caveat', cursive;
+    --title-font: 'Just Another Hand', cursive;
+    --p-font:'Raleway', sans-serif;
+}
+
+* {
+    padding: 0;
+    margin: 0;
+}
+
+body {
+    background-image: url(./images/6562423.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+}
 
 h1 {
     text-align: center;
-    font-family: 'Caveat', cursive;
-    font-size: 5rem;
-    color: #657f65;
+    font-family: var(--statement-font);
+    font-size: 6rem;
+    color: var(--primary-color);
+}
+
+main {
+    height: 100dvh;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+    margin-bottom: 10rem;
+}
+
+.blog-post {
+    background: #fff;
+    max-width: 500px;
+    border-radius: 10px;
+    box-shadow: 1px 1px 2rem rgba(0, 0, 0, 0.3);
+    position: relative;
+}
+  
+  
+.blog-container {
+    padding: 4rem;
+}
+
+h3 {
+    margin: 0 0 0.5rem 0;
+    color: #999;
+    font-family: var(--statement-font);
+    font-size: 1.25rem;
+}
+  
+h2 {
+    margin: 0 0 1rem 0;
+    font-size: 2.5rem;
+    font-family: 'Just Another Hand', cursive;
+    letter-spacing: 0.5px;
+    color: #333;
+}
+  
+p {
+    margin: 0 0 4.5rem 0;
+    font-size: 1.25rem;
+    font-family: var(--p-font);
+    line-height: 1.45;
+    color: #333;
+}
+  
+.button {
+    border: none;
+    outline: none;
+    background: linear-gradient(90deg, var(--primary-color), var(--secundary-color));
+    padding: 1.5rem 2rem;
+    border-radius: 50px;
+    color: white;
+    font-size: 1.2rem;
+    font-family: var(--p-font);
+    /* box-shadow: 1px 10px 2rem rgba(255, 94, 98, 0.5); */
+    transition: all 0.2s ease-in;
+    text-decoration: none;
+}
+  
+.button:hover {
+    /* box-shadow: 0px 5px 1rem rgba(255, 94, 98, 0.5); */
 }
